crates/check_cli/tests/snapshots/main_cases_handle_vue_files/format_vue_ts_files_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.vue`

```vue
<script setup lang="ts">
import { type something } from "file.vue";
const hello: string = "world";
</script>
<template></template>
```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
