crates/check_cli/tests/snapshots/main_cases_handle_vue_files/lint_stdin_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
<script setup lang="ts">
a == b;
delete a.c;

var foo: string = "";
</script>
<template></template>
```

# Termination Message

```block
stdin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The contents aren't fixed. Use the `--write` flag to fix them.
  


```

# Emitted Messages

```block
<script setup lang="ts">
a == b;
delete a.c;

var foo: string = "";
</script>
<template></template>
```
