crates/check_cli/tests/snapshots/main_cases_handle_vue_files/lint_stdin_write_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
snapshot_kind: text
---
# Input messages

```block
<script setup lang="ts">
a == b;
delete a.c;

var foo: string = "";
</script>
<template></template>
```

# Emitted Messages

```block
<script setup lang="ts">
a == b;
delete a.c;

var foo: string = "";
</script>
<template></template>
```
