crates/check_cli/tests/snapshots/main_cases_handle_vue_files/lint_stdin_write_unsafe_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
<script setup lang="ts">
a == b;
delete a.c;

var foo: string = "";
</script>
<template></template>
```

# Emitted Messages

```block
<script setup lang="ts">
a === b;
delete a.c;

var _foo: string = "";
</script>
<template></template>
```
