crates/check_cli/tests/snapshots/main_cases_handle_vue_files/sorts_imports_check.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `file.vue`

```vue
<script setup lang="ts">
import Button from "./components/Button.vue";
import * as vueUse from "vue-use";
</script>
<template></template>
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.vue:2:1 assist/source/organizeImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The imports and exports are not sorted.
  
    1 │ <script setup lang="ts">
  > 2 │ import Button from "./components/Button.vue";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    3 │ import * as vueUse from "vue-use";
    4 │ </script>
  
  i Safe fix: Organize Imports (Check)
  
    1   │ - import·Button·from·"./components/Button.vue";
    2   │ - import·*·as·vueUse·from·"vue-use";
      1 │ + import·*·as·vueUse·from·"vue-use";
      2 │ + import·Button·from·"./components/Button.vue";
    3 3 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
